--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,89 +1,135 @@
-/* Reset and base styles  */
-* {
-	padding: 0px;
-	margin: 0px;
-	border: none;
+@import './variables.scss';
+
+body {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.2;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #f6f6f3;
 }
 
-*,
-*::before,
-*::after {
-	box-sizing: border-box;
+.container {
+    max-width: 1300px;
+    height: 100%;
+    padding: 0 15px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
 }
 
-/* Links */
+.sidebar {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    padding: 30px;
+    &__home-link {
+        display: flex;
+        align-items: center;
+        width: max-content;
+        font-size: 20px;
+        font-weight: 700;
+        color: $black;
+        margin-bottom: 80px;
+        transition: color 0.2s linear;
+        &:hover {
+            color: $pink;
+        }
+        &::before {
+            content: '';
+            width: 24px;
+            min-width: 24px;
+            height: 24px;
+            margin-right: 8px;
+            background-repeat: no-repeat;
+            background-position: center;
+            background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7.84082 12.4577C7.84082 9.90778 9.9079 7.8407 12.4578 7.8407L19.3832 7.8407C21.9331 7.8407 24.0002 9.90778 24.0002 12.4577C24.0002 15.0075 21.9331 17.0746 19.3832 17.0746H12.4578C9.9079 17.0746 7.84082 15.0075 7.84082 12.4577Z' fill='%23FF868E'/%3E%3Cpath d='M12.4578 24C9.9079 24 7.84082 21.9329 7.84082 19.383L7.84082 12.4576C7.84082 9.90772 9.9079 7.84063 12.4578 7.84063C15.0077 7.84063 17.0747 9.90772 17.0747 12.4576V19.383C17.0747 21.9329 15.0077 24 12.4578 24Z' fill='%23FF868E'/%3E%3Cpath d='M11.5422 2.8856C11.5422 4.47927 10.2503 5.7712 8.6566 5.7712C7.06292 5.7712 5.771 4.47927 5.771 2.8856C5.771 1.29193 7.06292 0 8.6566 0C10.2503 0 11.5422 1.29193 11.5422 2.8856Z' fill='%23FF868E'/%3E%3Cpath d='M5.7712 16.7366C5.7712 18.3302 4.47927 19.6222 2.8856 19.6222C1.29193 19.6222 0 18.3302 0 16.7366C0 15.1429 1.29193 13.851 2.8856 13.851C4.47927 13.851 5.7712 15.1429 5.7712 16.7366Z' fill='%23FF868E'/%3E%3Cpath d='M19.6223 2.8856C19.6223 4.47927 18.3303 5.7712 16.7367 5.7712C15.143 5.7712 13.8511 4.47927 13.8511 2.8856C13.8511 1.29193 15.143 0 16.7367 0C18.3303 0 19.6223 1.29193 19.6223 2.8856Z' fill='%23FF868E'/%3E%3Cpath d='M5.7712 8.65684C5.7712 10.2505 4.47927 11.5424 2.8856 11.5424C1.29193 11.5424 0 10.2505 0 8.65684C0 7.06317 1.29193 5.77124 2.8856 5.77124C4.47927 5.77124 5.7712 7.06317 5.7712 8.65684Z' fill='%23FF868E'/%3E%3C/svg%3E");background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7.84082 12.4577C7.84082 9.90778 9.9079 7.8407 12.4578 7.8407L19.3832 7.8407C21.9331 7.8407 24.0002 9.90778 24.0002 12.4577C24.0002 15.0075 21.9331 17.0746 19.3832 17.0746H12.4578C9.9079 17.0746 7.84082 15.0075 7.84082 12.4577Z' fill='%23FF868E'/%3E%3Cpath d='M12.4578 24C9.9079 24 7.84082 21.9329 7.84082 19.383L7.84082 12.4576C7.84082 9.90772 9.9079 7.84063 12.4578 7.84063C15.0077 7.84063 17.0747 9.90772 17.0747 12.4576V19.383C17.0747 21.9329 15.0077 24 12.4578 24Z' fill='%23FF868E'/%3E%3Cpath d='M11.5422 2.8856C11.5422 4.47927 10.2503 5.7712 8.6566 5.7712C7.06292 5.7712 5.771 4.47927 5.771 2.8856C5.771 1.29193 7.06292 0 8.6566 0C10.2503 0 11.5422 1.29193 11.5422 2.8856Z' fill='%23FF868E'/%3E%3Cpath d='M5.7712 16.7366C5.7712 18.3302 4.47927 19.6222 2.8856 19.6222C1.29193 19.6222 0 18.3302 0 16.7366C0 15.1429 1.29193 13.851 2.8856 13.851C4.47927 13.851 5.7712 15.1429 5.7712 16.7366Z' fill='%23FF868E'/%3E%3Cpath d='M19.6223 2.8856C19.6223 4.47927 18.3303 5.7712 16.7367 5.7712C15.143 5.7712 13.8511 4.47927 13.8511 2.8856C13.8511 1.29193 15.143 0 16.7367 0C18.3303 0 19.6223 1.29193 19.6223 2.8856Z' fill='%23FF868E'/%3E%3Cpath d='M5.7712 8.65684C5.7712 10.2505 4.47927 11.5424 2.8856 11.5424C1.29193 11.5424 0 10.2505 0 8.65684C0 7.06317 1.29193 5.77124 2.8856 5.77124C4.47927 5.77124 5.7712 7.06317 5.7712 8.65684Z' fill='%23FF868E'/%3E%3C/svg%3E");
+        }
+    }
+    &__title {
+        font-size: 32px;
+        font-weight: 700;
+        margin-bottom: 5px;
+    }
+    &__description {
+        font-size: 16px;
+        color: $gray;
+        margin-bottom: 60px;
+    }
 
-a, a:link, a:visited  {
-    text-decoration: none;
+    .nav {
+        &__list {
+            display: flex;
+            align-items: center;
+            gap: 16px;
+        }
+        &__item {
+            &:first-child {
+                .link__img-container {
+                    background-color: #b4b7ff;
+                    border-color: #e1e2ff;
+                }
+            }
+            &:nth-child(2) {
+                .link__img-container {
+                    background-color: #97eab9;
+                    border-color: #d5f7e3;
+                }
+            }
+            &:last-child {
+                .link__img-container {
+                    background-color: #ffd280;
+                    border-color: #ffedcc;
+                }
+            }
+            .link {
+                &:hover {
+                    .link__img-container {
+                        border-color: $pink_hover;
+                    }
+                    .link__button {
+                        background-color: $pink_hover;
+                    }
+                }
+                &.router-link-active {
+                    .link__img-container {
+                        border-color: $pink_hover;
+                    }
+                    .link__button {
+                        color: $white;
+                        background-color: $pink;
+                    }
+                }
+                &__img-container {
+                    width: 140px;
+                    height: 200px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    border: 4px solid;
+                    border-color: transparent;
+                    border-radius: 16px;
+                    margin-bottom: 10px;
+                    transition: border-color 0.2s linear;
+                }
+                &__button {
+                    width: 140px;
+                    padding: 10px;
+                    text-transform: uppercase;
+                    text-align: center;
+                    font-size: 12px;
+                    line-height: 16px;
+                    letter-spacing: 2px;
+                    border-radius: 8px;
+                    background-color: $white;
+                    color: $pink;
+                    transition: color 0.2s linear, background-color 0.2s linear;
+                }
+            }
+        }
+    }
 }
 
-a:hover  {
-    text-decoration: none;
-}
-
-/* Common */
-
-aside, nav, footer, header, section, main {
-	display: block;
-}
-
-h1, h2, h3, h4, h5, h6, p {
-    font-size: inherit;
-	font-weight: inherit;
-}
-
-ul, ul li {
-	list-style: none;
-}
-
-img {
-	vertical-align: top;
-}
-
-img, svg {
-	max-width: 100%;
-	height: auto;
-}
-
-address {
-  font-style: normal;
-}
-
-/* Form */
-
-input, textarea, button, select {
-	font-family: inherit;
-    font-size: inherit;
-    color: inherit;
-    background-color: transparent;
-}
-
-input::-ms-clear {
-	display: none;
-}
-
-button, input[type="submit"] {
-    display: inline-block;
-    box-shadow: none;
-    background-color: transparent;
-    background: none;
-    cursor: pointer;
-}
-
-input:focus, input:active,
-button:focus, button:active {
-    outline: none;
-}
-
-button::-moz-focus-inner {
-	padding: 0;
-	border: 0;
-}
-
-label {
-	cursor: pointer;
-}
-
-legend {
-	display: block;
+.main-content {
+    height: 100vh;
+    padding: 30px;
 }
