--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -3,3 +3,7 @@ $black: #000000;
 $gray: #8C8C8C;
 $pink: #FF868E;
 $pink_hover: #FBE0DC;
+$green: #97EAB9;
+$green_hover: rgba($green, 0.3);
+$orange: #FFD280;
+$orange_hover: rgba($orange, 0.3);
