--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -36,6 +36,9 @@ body {
     height: 100%;
     padding: 30px;
     position: sticky;
+    @media screen and (max-width: 1230px) {
+        display: none;
+    }
     &__home-link {
         display: flex;
         align-items: center;
@@ -45,6 +48,9 @@ body {
         color: $black;
         margin-bottom: 80px;
         transition: color 0.2s linear;
+        @media screen and (max-width: 1230px) {
+            margin-bottom: 30px;
+        }
         &:hover {
             color: $pink;
         }
@@ -68,75 +74,90 @@ body {
         font-size: 16px;
         color: $gray;
         margin-bottom: 60px;
-    }
-
-    .nav {
-        &__list {
-            display: flex;
-            align-items: center;
-            gap: 16px;
+        @media screen and (max-width: 1230px) {
+            margin-bottom: 30px;
         }
-        &__item {
-            &:first-child {
+    }
+}
+
+.nav {
+    &__list {
+        display: flex;
+        align-items: center;
+        gap: 16px;
+        @media screen and (max-width: 500px) {
+            flex-direction: column;
+        }
+    }
+    &__item {
+        @media screen and (max-width: 500px) {
+            width: 100%;
+        }
+        &:first-child {
+            .link__img-container {
+                background-color: #b4b7ff;
+                border-color: #e1e2ff;
+            }
+        }
+        &:nth-child(2) {
+            .link__img-container {
+                background-color: #97eab9;
+                border-color: #d5f7e3;
+            }
+        }
+        &:last-child {
+            .link__img-container {
+                background-color: #ffd280;
+                border-color: #ffedcc;
+            }
+        }
+        .link {
+            &:hover {
                 .link__img-container {
-                    background-color: #b4b7ff;
-                    border-color: #e1e2ff;
+                    border-color: $pink_hover;
+                }
+                .link__button {
+                    background-color: $pink_hover;
                 }
             }
-            &:nth-child(2) {
+            &.router-link-active {
                 .link__img-container {
-                    background-color: #97eab9;
-                    border-color: #d5f7e3;
+                    border-color: $pink_hover;
+                }
+                .link__button {
+                    color: $white;
+                    background-color: $pink;
                 }
             }
-            &:last-child {
-                .link__img-container {
-                    background-color: #ffd280;
-                    border-color: #ffedcc;
+            &__img-container {
+                width: 140px;
+                height: 200px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border: 4px solid;
+                border-color: transparent;
+                border-radius: 16px;
+                margin-bottom: 10px;
+                transition: border-color 0.2s linear;
+                @media screen and (max-width: 500px) {
+                    display: none;
                 }
             }
-            .link {
-                &:hover {
-                    .link__img-container {
-                        border-color: $pink_hover;
-                    }
-                    .link__button {
-                        background-color: $pink_hover;
-                    }
-                }
-                &.router-link-active {
-                    .link__img-container {
-                        border-color: $pink_hover;
-                    }
-                    .link__button {
-                        color: $white;
-                        background-color: $pink;
-                    }
-                }
-                &__img-container {
-                    width: 140px;
-                    height: 200px;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    border: 4px solid;
-                    border-color: transparent;
-                    border-radius: 16px;
-                    margin-bottom: 10px;
-                    transition: border-color 0.2s linear;
-                }
-                &__button {
-                    width: 140px;
-                    padding: 10px;
-                    text-transform: uppercase;
-                    text-align: center;
-                    font-size: 12px;
-                    line-height: 16px;
-                    letter-spacing: 2px;
-                    border-radius: 8px;
-                    background-color: $white;
-                    color: $pink;
-                    transition: color 0.2s linear, background-color 0.2s linear;
+            &__button {
+                width: 140px;
+                padding: 10px;
+                text-transform: uppercase;
+                text-align: center;
+                font-size: 12px;
+                line-height: 16px;
+                letter-spacing: 2px;
+                border-radius: 8px;
+                background-color: $white;
+                color: $pink;
+                transition: color 0.2s linear, background-color 0.2s linear;
+                @media screen and (max-width: 500px) {
+                    width: 100%;
                 }
             }
         }
@@ -147,7 +168,7 @@ body {
     height: 100vh;
     padding: 30px;
     @media screen and (max-width: 1230px) {
-        padding: 0;
+        padding: 30px 0;
     }
 }
 
@@ -167,14 +188,25 @@ body {
 .cats-list {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    @media screen and (max-width: 800px) {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    @media screen and (max-width: 500px) {
+        grid-template-columns: 1fr;
+    }
     gap: 15px;
     margin-bottom: 20px;
     &__item {
         position: relative;
-        width: 200px;
         height: 140px;
         border-radius: 15px;
         cursor: pointer;
+        @media screen and (max-width: 1230px) {
+            height: 240px;
+        }
+        @media screen and (max-width: 800px) {
+            height: 180px;
+        }
         &::before {
             content: '';
             display: block;
