--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -31,11 +31,12 @@ body {
 }
 
 .sidebar {
+    position: sticky;
+    top: 0;
+    align-self: start;
     display: flex;
     flex-direction: column;
-    height: 100%;
     padding: 30px;
-    position: sticky;
     @media screen and (max-width: 1230px) {
         display: none;
     }
@@ -165,7 +166,6 @@ body {
 }
 
 .main-content {
-    height: 100vh;
     padding: 30px;
     @media screen and (max-width: 1230px) {
         padding: 30px 0;
@@ -201,6 +201,29 @@ body {
         height: 140px;
         border-radius: 15px;
         cursor: pointer;
+        &.breed {
+            .cats-list__item-name {
+                display: block;
+                width: 90%;
+                position: absolute;
+                bottom: 10px;
+                left: 50%;
+                transform: translateX(-50%);
+                opacity: 0;
+                transition: opacity 0.3s ease-in;
+                background-color: $white;
+                color: $pink;
+                font-size: 16px;
+                line-height: 24px;
+                text-align: center;
+                border-radius: 10px;
+                padding: 8px 0;
+                z-index: 5;
+            }
+            &::after {
+                display: none !important;
+            }
+        }
         @media screen and (max-width: 1230px) {
             height: 240px;
         }
@@ -247,10 +270,14 @@ body {
                 content: '';
                 display: block;
             }
+            .cats-list__item-name {
+                opacity: 1;
+            }
         }
         img {
             width: 100%;
             height: 100%;
+            object-fit: cover;
             border-radius: 15px;
         }
     }
