--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -1,6 +1,7 @@
 $white: #ffffff;
 $black: #000000;
 $gray: #8C8C8C;
+$gray_light: #F8F8F7;
 $pink: #FF868E;
 $pink_hover: #FBE0DC;
 $green: #97EAB9;
