--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -439,6 +439,15 @@ body {
         background-position: center;
         background-image: url("data:image/svg+xml,%3Csvg width='12' height='12' viewBox='0 0 12 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_1_153)'%3E%3Cpath d='M6.59406 9.17417L11.7538 4.01436C12.0821 3.68616 12.0821 3.15395 11.7538 2.82587C11.4256 2.4978 10.8935 2.4978 10.5655 2.82587L5.99993 7.39154L1.43458 2.82606C1.10635 2.49792 0.574264 2.49792 0.24617 2.82606C-0.0820567 3.15414 -0.0820567 3.68628 0.24617 4.01447L5.40591 9.17431C5.57003 9.33836 5.78492 9.42029 5.9999 9.42029C6.21498 9.42029 6.43002 9.3382 6.59406 9.17417Z' fill='%238C8C8C'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_1_153'%3E%3Crect width='12' height='12' fill='white' transform='matrix(0 -1 1 0 0 12)'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E");
     }
+    &-label {
+        padding-left: 10px;
+        font-size: 10px;
+        font-weight: 500;
+        line-height: 18px;
+        text-transform: uppercase;
+        color: $gray;
+        margin-bottom: 5px;
+    }
     &__content {
         display: none;
         position: absolute;
@@ -469,6 +478,26 @@ body {
         height: 100%;
         z-index: 15;
     }
+}
+
+* {
+	scrollbar-color: $pink_hover rgba(0, 0, 0, .7);
+	scrollbar-width: thin;
+}
+
+::-webkit-scrollbar {
+	width: 8px;
+	height: 8px;
+}
+::-webkit-scrollbar-thumb {
+	background-color: $gray_light;
+	border-radius: 2px;
+}
+::-webkit-scrollbar-track {
+	background-color: $gray_light;
+}
+::-webkit-scrollbar-corner {
+	background-color: $gray_light;	
 }
 // .cats-list {
 //     display: grid;
